final commit Insha'Allah

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&display=swap" rel="stylesheet">
     <title>Queuing System</title>
   </head>
   <body>
